--- a/index.html
+++ b/index.html
@@ -10,23 +10,22 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <!-- Library script(s) go here -->
-    <script
+    <!-- <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"></script> -->
 
-      <script type="application/javascript" src="https://unpkg.com/react@16.0.0/umd/react.production.min.js"></script>
+      <!-- <script type="application/javascript" src="https://unpkg.com/react@16.0.0/umd/react.production.min.js"></script>
         <script type="application/javascript" src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.production.min.js"></script>
-        <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
+        <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script> -->
 
+        <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"></script>
   </head>
 
   <body>
 
-    <div id="form"></div>
-
     <!-- My script(s) -->
-    <script src="js/script.js" type="text/babel"></script>
+    <script src="js/script.js"></script>
   </body>
 
 </html>
