--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="css/style.css" />
 
     <!-- Library script(s) go here -->
-    <!-- <script
+    <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"></script> -->
+      crossorigin="anonymous"></script>
 
       <!-- <script type="application/javascript" src="https://unpkg.com/react@16.0.0/umd/react.production.min.js"></script>
         <script type="application/javascript" src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.production.min.js"></script>
@@ -25,6 +25,7 @@
   <body>
 
     <!-- My script(s) -->
+    <script src="js/FormGenerator.js"></script>
     <script src="js/script.js"></script>
   </body>
 
