--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
     <!-- My script(s) -->
     <script src="js/FormGenerator.js"></script>
-    <script src="js/script.js"></script>
+    <!-- <script src="js/script.js"></script> -->
+    <script src="js/html-version.js"></script>
   </body>
 
 </html>
