--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
 
     <!-- My script(s) -->
-    <script src="js/FormGenerator.js"></script>
+    <!-- <script src="js/FormGenerator.js"></script> -->
     <!-- <script src="js/script.js"></script> -->
     <script src="js/html-version.js"></script>
   </body>
